--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body{
    text-align: center;
    box-shadow: 0 30px 50px rgb(65, 50, 100, 0.08);
 }
+header{
+    border-bottom: 1px solid #f7f7f7;
+    padding: 2px 0 30px ;
+}
 .search-input{
     background-color:#f7f9fe;
     width: 50%;
@@ -23,11 +27,20 @@ body{
     font-size: 16px;
 }
 .search-button{
-    background-color: blue;
+    background-color: purple;
     color: white;
     border-radius: 20px;
     padding: 20px;
     font-size: 16px;
     margin-left: 5px;
     width: 150px;
+}
+a{
+    color:purple ;
+}
+footer{
+    border-bottom: 1px solid #f7f7f7;
+    padding: 30px 0 0 0  ;
+    text-align: center;
+    color: black;
 }
