--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ header{
     margin-left: 5px;
     width: 150px;
 }
+.weather-app{
+    display:flex;
+    justify-content: space-between;
+    padding: 30px 0;
+}
 a{
     color:purple ;
 }
