--- a/style.css
+++ b/style.css
@@ -40,12 +40,48 @@ header{
     justify-content: space-between;
     padding: 30px 0;
 }
+main{
+    padding: 30px 0;
+}
+h1{
+    margin: 0;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 48px;
+}
+.app-details{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    word-spacing: 5px;
+}
+.app-details strong{
+    color: #f65282;
+}
+.temp-container{
+    display: flex;
+}
+.app-temp{
+    font-size: 88px;
+    line-height: 1;
+    font-weight: 400;
+    margin-left: 10px;
+}
+.temp-icon{
+    font-size: 45px;
+    margin-top: 10px;
+}
+.temp-unit{
+    font-size:30px;
+}
+
 a{
     color:purple ;
 }
 footer{
     border-bottom: 1px solid #f7f7f7;
-    padding: 30px 0 0 0  ;
+    padding: 30px 0 0 0;
     text-align: center;
     color: black;
+    bottom: 0;
 }
