--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: blueviolet;
+    background-color: #f65282;
   font-family: "Cal Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -7,7 +7,7 @@ body{
 
 
 .container{
-   background-color: white; 
+   background-color: whitesmoke; 
    max-width: 900px;
    margin: 30px auto;
    padding: 20px;
