--- a/style.css
+++ b/style.css
@@ -88,16 +88,16 @@ h1{
     margin-bottom: 10px;
 }
 .fore-icon{
-    width: 50px;
-    height: 50px;
-    font-size: 38px;
-    margin-bottom: 10px;
+    width: 88px;
+    height: 88px;
+    margin-bottom: 0 auto;
+    display: block;
 }
 .fore-temp{
     font-size: 18px;
     color: #f65282;
     word-spacing: 5px;
-    
+
 }
 a{
     color:purple ;
