--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
 body{
-    background-color: #f65282;
   font-family: "Cal Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  color: white;
+}
+#background-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
 }
 
 
 .container{
-   background-color: whitesmoke; 
+   background-color: transparent; 
    max-width: 900px;
    margin: 30px auto;
    padding: 20px;
    border-radius: 10px;
    text-align: center;
    box-shadow: 0 30px 50px rgb(65, 50, 100, 0.08);
+   
 }
 header{
     border-bottom: 1px solid #f7f7f7;
@@ -84,7 +93,7 @@ h1{
     font-size: 25px;
     font-weight: 100;
     line-height: 28px;
-    color: rgba(39, 33, 66, 0.726);
+    color: rgba(128, 128, 128, 0.863);
     margin-bottom: 10px;
 }
 .fore-icon{
@@ -106,6 +115,6 @@ footer{
     border-bottom: 1px solid #f7f7f7;
     padding: 30px 0 0 0;
     text-align: center;
-    color: black;
+    color: white;
     bottom: 0;
 }
